# AdventOfCode

./: .gitignore  AdventOfCode.pro  CMakeLists.txt  cli.py  leaderboard.cpp  leaderboard.h  mainwindow.cpp  requirements.txt  solvers.cpp
2019/: intcodecomputer.cpp  puzzle_2019_02.cpp
2025/: event_2025.h  puzzle_2025_01.cpp  puzzle_2025_01.h
cpp_solvers/: CMakeLists.txt
cpp_solvers/include/: solvers.hpp  utils.hpp
cpp_solvers/src/: aoc.cpp  bindings.cpp  utils.cpp
cpp_solvers/src/2025/: solver_2025_01.cpp  solver_2025_02.cpp  solver_2025_03.cpp  solver_2025_04.cpp  solver_2025_05.cpp  solver_2025_06.cpp  solver_2025_08.cpp
gui/: configuration.py  dialogs.py  icons.py  icons_delegate.py  main.py  main_window.py  mainwindow.cpp  mainwindow.h  mainwindow.ui  paths.py  problem.py  session.py  styles.css  web_utils.py
gui/ui/: main_window.ui  ui_main_window.py
py_solvers/: solvers.py
py_solvers/2025/: aoc_solver_2025_01.py
scripts/: configure.py  qtfiles.py  run.py  solve.py
solvers/: solvers.cpp  solvers.h
solvers/2018/: puzzle_2018_06.cpp  puzzle_2018_06.h
solvers/2021/: puzzle_2021_13.cpp
solvers/2022/: puzzle_2022_10.cpp
solvers/2025/: puzzle_2025_01.cpp  puzzle_2025_01.h
